--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 fastapi==0.104.1
 uvicorn~=0.29.0
 tensorflow==2.15.0
-pillow==10.0.0
 numpy==1.24.3
 python-multipart==0.0.6
 pydantic==2.4.2
 python-jose==3.3.0
 h5py~=3.12.1
 pytest~=8.3.4
+torch==2.0.1
+torchvision==0.15.2
+transformers==4.33.2
+Pillow==10.0.1
+matplotlib==3.8.2
+tqdm==4.65.0
+requests==2.31.0
+scipy==1.11.3
